--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ notification:
 os: osx
 
 before_install:
-    - brew outdated llvm37
+    - brew info llvm
+    - brew info llvm37
 
 script:
     - brew list
