--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ compiler:
 
 addons:
   apt:
-    sources: [ 'http://llvm.org/apt/precise/' 'llvm-toolchain-precise-3.7' 'main' ]
+    sources: [ 'http://llvm.org/apt/precise/', 'llvm-toolchain-precise-3.7', 'main' ]
     packages: [ 'clang-3.7' ]
 
 before_install:
