--- a/.travis.yml
+++ b/.travis.yml
@@ -14,20 +14,20 @@ compiler:
 
 addons:
   apt:
-    sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.8' ]
-    packages: [ 'clang-3.8' ]
+    sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7' ]
+    packages: [ 'clang-3.7', 'libclang-3.7' ]
 
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install llvm37; fi
 
 before_script:
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CXX=clang++-3.8; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CXX=clang++-3.7; fi
     - $CXX --version
 
 script:
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then dpkg -L clang-3.8; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then dpkg -L clang-3.7; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cd /usr/lib; ls; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cd /usr/lib/llvm-3.8; ls; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cd /usr/lib/llvm-3.8/include; ls; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cd /usr/lib/llvm-3.7; ls; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cd /usr/lib/llvm-3.7/include; ls; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cd /usr/local/opt/llvm37/lib/llvm-3.7/include; ls; fi
