--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ compiler:
 
 addons:
   apt:
-    sources: [ 'ubuntu-toolchain-r-test' ]
+    sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise' ]
     packages: [ 'clang-3.8' ]
 
 before_install:
