--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ addons:
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install llvm37; fi
-    - cd build
     - curl -O https://github.com/premake/premake-core/releases/download/v5.0.0-alpha8/premake-5.0.0-alpha8-macosx.tar.gz
     - tar -xf premake-5.0.0-alpha8-macosx.tar.gz
 
@@ -28,4 +27,5 @@ before_script:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CXX=clang++-3.8; fi
 
 script:
+    - ./premake5 --version
     - $CXX --version
