--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,11 @@ addons:
     packages: [ 'clang-3.8' ]
 
 before_install:
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then; brew update; brew install llvm37; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+        brew update
+        brew install llvm37
+      fi
+
     - ./download-premake.sh $TRAVIS_OS_NAME
 
 before_script:
