--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ addons:
 
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-        brew update
-        brew install llvm37
+        brew update;
+        brew install llvm37;
       fi
 
     - ./download-premake.sh $TRAVIS_OS_NAME
