--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ compiler:
 addons:
   apt:
     sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise' ]
-    packages: [ 'clang-3.8', 'libc6-dev' ]
+    packages: [ 'clang-3.8', 'libc6-dev=2.16' ]
 
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
