--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,7 @@ before_script:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CXX=clang++-3.8; fi
 
 script:
-    - cd /lib/x86_64-linux-gnu
-    - ls -l
+    - ls -l /lib/x86_64-linux-gnu/libc6*
 
     - ./premake5 --version
     - $CXX --version
