--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,34 @@ notification:
         on_success: never
         on_failure: never
 
-os:
-    - linux
-    - osx
+matrix:
+    include:
+        - os: linux
+          compiler: gcc
+          env: INSTALL_CXX=g++-5 INSTALL_CC=gcc-5
+          addons:
+            apt:
+                sources: [ 'ubuntu-toolchain-r-test' ]
+                packages: [ 'g++-5', 'gcc-5' ]
 
-compiler:
-    - clang
+        - os: linux
+          compiler: gcc
+          env: INSTALL_CXX=g++-6 INSTALL_CC=gcc-6
+          addons:
+            apt:
+                sources: [ 'ubuntu-toolchain-r-test' ]
+                packages: [ 'g++-6', 'gcc-6' ]
+
+        - os: linux
+          compiler: clang
+          env: INSTALL_CXX=clang++-3.8
+          addons:
+            apt:
+                sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise' ]
+                packages: [ 'clang-3.8' ]
+
+        - os: osx
+          compiler: clang
 
 addons:
   apt:
@@ -26,7 +48,14 @@ before_install:
     - ./download-premake.sh $TRAVIS_OS_NAME
 
 before_script:
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CXX=clang++-3.8; fi
+    - if [ -n "${INSTALL_CXX}" ]; then
+        CXX=${INSTALL_CXX};
+        $CXX --version;
+      fi
+    - if [ -n "${INSTALL_CC}" ]; then
+        CC=${INSTALL_CC};
+        $CC --version;
+      fi
 
 script:
     - ./premake5 --version
