--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,13 @@ matrix:
                 sources: [ 'ubuntu-toolchain-r-test' ]
                 packages: [ 'g++-5', 'gcc-5' ]
 
-        - os: linux
-          compiler: gcc
-          env: INSTALL_CXX=g++-6 INSTALL_CC=gcc-6
-          addons:
-            apt:
-                sources: [ 'ubuntu-toolchain-r-test' ]
-                packages: [ 'g++-6', 'gcc-6' ]
+        #- os: linux
+        #  compiler: gcc
+        #  env: INSTALL_CXX=g++-6 INSTALL_CC=gcc-6
+        #  addons:
+        #    apt:
+        #        sources: [ 'ubuntu-toolchain-r-test' ]
+        #        packages: [ 'g++-6', 'gcc-6' ]
 
         - os: linux
           compiler: clang
