--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,10 @@ addons:
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         brew update;
-        brew install gcc5
-        brew install gcc6
+        brew install gcc5;
+        brew install gcc6;
         brew install llvm38;
-        brew install sqlite
+        brew install sqlite;
       fi
 
     - ./download-premake.sh $TRAVIS_OS_NAME
