--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
     sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise' ]
     packages:
         - gcc-5
-        - clang-3.8
+        - clang-3.8-dev
         - libsqlite3-dev
 
 before_install:
