--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ os:
 
 addons:
   apt:
-    sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.8' ]
+    sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise' ]
     packages:
         - gcc-5
         - clang-3.8
@@ -33,6 +33,7 @@ before_install:
     - ./download-premake.sh $TRAVIS_OS_NAME
 
 before_script:
+    - cat ~/apt-get-update.log
     - gcc-5 --version;
     - clang-3.8 --version
 
