--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,9 @@ before_install:
 before_script:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         cat ~/apt-get-update.log;
-        cat /etc/apt/sources.list;
+      fi
+      - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+          cat /etc/apt/sources.list;
       fi
 
     - gcc-5 --version;
