--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
           compiler: clang
 
     allow_failures:
-        env: LINUX_TEST
+        - env: LINUX_TEST=clang-3.8
 
 addons:
   apt:
