--- a/.travis.yml
+++ b/.travis.yml
@@ -71,19 +71,19 @@ before_script:
       fi
 
     - if [[ "$LINUX_TEST" == "clang-3.6" ]]; then
-        ls -l /usr/lib/llvm-3.6/bin;
+        dpkg -L clang-3.6;
         clang++-3.6 --version;
         clang-3.6 --version;
       fi
 
     - if [[ "$LINUX_TEST" == "clang-3.7" ]]; then
-        ls -l /usr/lib/llvm-3.7/bin;
+        dpkg -L clang-3.7;
         clang++-3.7 --version;
         clang-3.7 --version;
       fi
 
     - if [[ "$LINUX_TEST" == "clang-3.8" ]]; then
-        ls -l /usr/lib/llvm-3.8/bin;
+        dpkg -L clang-3.8;
         clang++-3.8 --version;
         clang-3.8 --version;
       fi
