--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
             apt:
                 sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7' ]
                 packages:
-                    - clang-3.7
+                    - llvm-3.7-dev
 
         - os: linux
           compiler: clang
