--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
             apt:
                 sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7' ]
                 packages:
-                    - llvm-3.7-dev
+                    - clang-3.7
 
         - os: linux
           compiler: clang
@@ -72,18 +72,21 @@ before_script:
 
     - if [[ "$LINUX_TEST" == "clang-3.6" ]]; then
         dpkg -L clang-3.6;
+        ls -l /usr/lib/llvm-3.6/include;
         clang++-3.6 --version;
         clang-3.6 --version;
       fi
 
     - if [[ "$LINUX_TEST" == "clang-3.7" ]]; then
         dpkg -L clang-3.7;
+        ls -l /usr/lib/llvm-3.7/include;
         clang++-3.7 --version;
         clang-3.7 --version;
       fi
 
     - if [[ "$LINUX_TEST" == "clang-3.8" ]]; then
         dpkg -L clang-3.8;
+        ls -l /usr/lib/llvm-3.8/include;
         clang++-3.8 --version;
         clang-3.8 --version;
       fi
