--- a/.travis.yml
+++ b/.travis.yml
@@ -71,16 +71,19 @@ before_script:
       fi
 
     - if [[ "$LINUX_TEST" == "clang-3.6" ]]; then
+        ls /usr/lib/llvm-3.6;
         ls /usr/lib/llvm-3.6/include;
         clang-3.6 --version;
       fi
 
     - if [[ "$LINUX_TEST" == "clang-3.7" ]]; then
+        ls /usr/lib/llvm-3.7;
         ls /usr/lib/llvm-3.7/include;
         clang-3.7 --version;
       fi
 
     - if [[ "$LINUX_TEST" == "clang-3.8" ]]; then
+        ls /usr/lib/llvm-3.8;
         ls /usr/lib/llvm-3.8/include;
         clang-3.8 --version;
       fi
