--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ matrix:
           addons:
             apt:
                 sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6' ]
-                packages:
-                    - clang-3.6
+                packages: [ 'llvm-3.6-dev', 'clang-3.6' ]
 
         - os: linux
           compiler: clang
@@ -30,8 +29,7 @@ matrix:
           addons:
             apt:
                 sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7' ]
-                packages:
-                    - clang-3.7
+                packages: [ 'llvm-3.7-dev', 'clang-3.7' ]
 
         - os: linux
           compiler: clang
@@ -39,8 +37,7 @@ matrix:
           addons:
             apt:
                 sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise' ]
-                packages:
-                    - clang-3.8
+                packages: [ 'llvm-3.8-dev', 'clang-3.8' ]
 
         - os: osx
           compiler: clang
