--- a/.travis.yml
+++ b/.travis.yml
@@ -70,21 +70,21 @@ before_script:
     - if [[ "$LINUX_TEST" == "clang-3.6" ]]; then
         ls /usr/lib/llvm-3.6;
         ls /usr/lib/llvm-3.6/include;
-        ls /usr/lib/llvm-3.6/lib/*clang.*;
+        ls /usr/lib/llvm-3.6/lib/*clang*;
         clang-3.6 --version;
       fi
 
     - if [[ "$LINUX_TEST" == "clang-3.7" ]]; then
         ls /usr/lib/llvm-3.7;
         ls /usr/lib/llvm-3.7/include;
-        ls /usr/lib/llvm-3.7/lib/*clang.*;
+        ls /usr/lib/llvm-3.7/lib/*clang*;
         clang-3.7 --version;
       fi
 
     - if [[ "$LINUX_TEST" == "clang-3.8" ]]; then
         ls /usr/lib/llvm-3.8;
         ls /usr/lib/llvm-3.8/include;
-        ls /usr/lib/llvm-3.8/lib/*clang.*;
+        ls /usr/lib/llvm-3.8/lib/*clang*;
         clang-3.8 --version;
       fi
 
