--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
           addons:
             apt:
                 sources:  [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6' ]
-                packages: [ 'clang-3.6', 'libclang-3.6' ]
+                packages: [ 'clang-3.6', 'libclang-3.6-dev' ]
 
         - os: linux
           compiler: clang
@@ -29,7 +29,7 @@ matrix:
           addons:
             apt:
                 sources:  [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7' ]
-                packages: [ 'clang-3.7', 'libclang-3.7' ]
+                packages: [ 'clang-3.7', 'libclang-3.7-dev' ]
 
         - os: linux
           compiler: clang
@@ -37,7 +37,7 @@ matrix:
           addons:
             apt:
                 sources:  [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise' ]
-                packages: [ 'clang-3.8', 'libclang-3.8' ]
+                packages: [ 'clang-3.8', 'libclang-3.8-dev' ]
 
         - os: osx
           compiler: clang
