--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ matrix:
           env: LINUX_TEST=clang-3.8
           addons:
             apt:
-                sources:  [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise', 'llvm-toolchain-precise-3.8' ]
+                sources:  [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.8' ]
                 packages: [ 'clang-3.8', 'libclang-3.8-dev' ]
 
         - os: osx
