--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,7 @@ notification:
 
 cache:
     directories:
-        - llvm-3.6.2
-        - llvm-3.7.1
-        - llvm-3.8.0
-        - premake-core
+        - dependencies
 
 matrix:
     include:
