--- a/.travis.yml
+++ b/.travis.yml
@@ -50,5 +50,5 @@ before_script:
 script:
     - ./screenfetch.sh
     - ./detect-travis.sh
-    - ./premake5 --version
+    #- ./premake5 --version
     - $CXX --version
